--- a/project/index.html
+++ b/project/index.html
@@ -19,18 +19,19 @@
 
           <div class="line">
             <!-- пользователь указывает нижнюю границу weight -->
-            <div>min weight:</div>
-            <input class="minweight__input" />
+            <div>Минимальный вес:</div>
+            <input class="minweight__input" type="number" min="0"/>
           </div>
 
           <div class="line">
             <!-- пользователь указывает верхнюю границу weight -->
-            <div>max weight:</div>
-            <input class="maxweight__input" />
+            <div>Максимальный вес:</div>
+            <input class="maxweight__input" type="number" min="0"/>
           </div>
 
           <!-- TODO: при нажатии элементы массива фильтруются в пределах [minweight, maxweight] -->
           <button class="filter__btn line">Фильтровать</button>
+          <!-- <button class="refresh__btn line">Сброс</button> -->
 
           <div class="line">
             <span>Алгоритм сортировки:</span>
@@ -52,18 +53,18 @@
 
           <!-- пользователь указывает значения характеристик будущего фрукта -->
           <div class="line">
-            <div>kind:</div>
+            <div>Вид:</div>
             <input class="kind__input" />
           </div>
 
           <div class="line">
-            <div>color:</div>
+            <div>Цвет:</div>
             <input class="color__input" />
           </div>
 
           <div class="line">
-            <div>weight:</div>
-            <input class="weight__input" />
+            <div>Вес:</div>
+            <input class="weight__input" type="number" min="0" />
           </div>
 
           <!-- TODO: при нажатии новый фрукт добавляется в конец списка -->
@@ -76,7 +77,6 @@
         <h2 class="wrapper__title">🥑 Список экзотических фруктов</h2>
         <!-- TODO: формировать список динамически (то есть закоментированный код удалить) -->
         <ul class="fruits__list">
-          
         </ul>
       </section>
     </main>
@@ -84,45 +84,3 @@
     <script src="./js/index.js"></script>
   </body>
 </html>
-
-
-<!-- <li class="fruit__item fruit_violet">
-            <div class="fruit__info">
-              <div>index: 0</div>
-              <div>kind: Мангустин</div>
-              <div>color: фиолетовый</div>
-              <div>weight (кг): 13</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_green">
-            <div class="fruit__info">
-              <div>index: 1</div>
-              <div>kind: Дуриан</div>
-              <div>color: зеленый</div>
-              <div>weight (кг): 35</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_carmazin">
-            <div class="fruit__info">
-              <div>index: 2</div>
-              <div>kind: Личи</div>
-              <div>color: розово-красный</div>
-              <div>weight (кг): 17</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_yellow">
-            <div class="fruit__info">
-              <div>index: 3</div>
-              <div>kind: Карамбола</div>
-              <div>color: Желтый</div>
-              <div>weight (кг): 28</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_lightbrown">
-            <div class="fruit__info">
-              <div>index: 4</div>
-              <div>kind: Тамаринд</div>
-              <div>color: светло-коричневый</div>
-              <div>weight (кг): 22</div>
-            </div>
-          </li> -->
