--- a/project/index.html
+++ b/project/index.html
@@ -69,7 +69,11 @@
 
           <!-- TODO: при нажатии новый фрукт добавляется в конец списка -->
           <button class="add__action__btn line">Добавить фрукт</button>
+          <div class="line">
+            <a href="/module11" alt="В репозиторий">В репозиторий</a>
+          </div>
         </div>
+        
       </section>
 
       <!-- СПИСОК ЭКЗОТИЧЕСКИХ ФРУКТОВ -->
